fixed cookie and redirect issue

--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@ MONGO_URL=mongodb+srv://spimrify_db_user:vEVAAZSuRgXhQb3S@cluster0.nbe0xvf.mongo
 
 
 JWT_SECRET="464KJDHFH365IJS"
-NODE_ENVIRONMENT="development"
+NODE_ENV="production"
 
 CLOUDINARY_CLOUD_NAME="dkjk039au"
 CLOUDINARY_API_KEY="793185851877117"
@@ -11,3 +11,4 @@ CLOUDINARY_API_SECRET="TLcfrKIz7lMqFENcDRSwrgALNmA"
 
 EMAIL_PASS=swhqqdupysrifzxn
 EMAIL_AUTH=spimrify@gmail.com
+FRONTEND_URL=https://spimrify-frontend.onrender.com
