added backend and frontend files

--- a/backend/.env
+++ b/backend/.env
@@ -12,3 +12,4 @@ CLOUDINARY_API_SECRET="TLcfrKIz7lMqFENcDRSwrgALNmA"
 EMAIL_PASS=unrrbemubkhlzcaw
 EMAIL_AUTH=spimrify@gmail.com
 FRONTEND_URL=https://spimrify-frontend.onrender.com
+RESEND_API_KEY=re_9pKNssQ5_FY1qfDtShUWQU6kFiuesVjqV
